MiniCompiladorWorkflow/tests/valid/test10.wf
tarea inicio { print("Profesor"); } ir_a fin si estado == "OK"; tarea fin { print("Terminado"); }