MiniCompiladorWorkflow/tests/invalid/error9.wf
tarea inicio { ir_a fin si ; } tarea fin { }
